# CrabPort

./: Cargo.toml  Info.plist.ext  README.en.md  README.md  build.rs  crabport.rc
.github/workflows/: dev.yml  release.yml
THIRD-PARTY-LICENSES/: README.md  lucide-icons-ISC.txt
crabport-core/: Cargo.toml
crabport-core/src/: config.rs  credential.rs  crypto.rs  keybind.rs  lib.rs  log.rs  store.rs
crabport-core/src/store/: groups.rs  hosts.rs  snippets.rs  tunnels.rs
crabport-proxy/: Cargo.toml
crabport-proxy/src/: lib.rs
crabport-serial/: Cargo.toml
crabport-serial/src/: backend.rs  lib.rs  session.rs
crabport-sftp/: Cargo.toml
crabport-sftp/src/: api.rs  backend.rs  entry.rs  lib.rs  transfer.rs
crabport-ssh/: Cargo.toml
crabport-ssh/src/: backend.rs  crabport_tunnel.rs  handler.rs  lib.rs  monitor.rs  session.rs  terminal.rs  transfer.rs
crabport-ssh/src/transfer/: dir.rs  file.rs
crabport-telnet/: Cargo.toml
crabport-telnet/src/: backend.rs  session.rs
crabport-terminal/: Cargo.toml
crabport-terminal/src/: lib.rs  pty.rs  terminal.rs
crabport-tunnel/: Cargo.toml
crabport-tunnel/src/: lib.rs
crabport-ui/: Cargo.toml
crabport-ui/assets/themes/: mocha.toml  modern-dark.toml  tokyo-night.toml
crabport-ui/i18n/: en.toml  en.yml  zh-CN.toml  zh-CN.yml
crabport-ui/src/: app.rs  app_state.rs  color.rs  components.rs  keybinds.rs  layouts.rs  lib.rs  macos_services.rs  motion.rs  theme.rs  version_check.rs  views.rs
crabport-ui/src/app/: connection.rs  context.rs  groups.rs  hosts.rs  snippets.rs  tabs.rs  tunnels.rs
crabport-ui/src/components/: button.rs  button_with_close.rs  context_menu.rs  dialog.rs  drop_zone_overlay.rs  dropdown.rs  group_header.rs  host_selector.rs  input.rs  notification.rs  number_input.rs  overlay.rs  segmented_control.rs  settings_section.rs  switch.rs  tabs.rs  tooltip.rs  window_controls.rs  window_layout.rs
crabport-ui/src/layouts/: command_palette.rs  connection_form.rs  content.rs  credential_form.rs  panel.rs  sidebar.rs  tabbar.rs  terminal_toolbar.rs  toolbar.rs
crabport-ui/src/views/: credentials.rs  group_rename.rs  groups.rs  hosts.rs  panel.rs  sessions.rs  sftp.rs  snippets.rs  terminal.rs  tunnels.rs
crabport-ui/src/views/panel/: history_command_panel.rs  sftp.rs  snippets_panel.rs  tunnels_panel.rs
crabport-ui/src/views/sessions/: form.rs  with_certificate.rs
crabport-ui/src/views/sftp/: drag.rs  helpers.rs  panel.rs  toolbar.rs  transfer_history.rs  view.rs
crabport-ui/src/views/snippets/: form.rs
crabport-ui/src/views/terminal/: color.rs  connection_overlay.rs  fonts.rs  runs.rs  scrollbar_handle.rs  selection.rs  split.rs  toolbar.rs
crabport-ui/src/views/tunnels/: form.rs  state.rs
crabport-ui/src/windows/: about.rs  settings.rs
src/: main.rs
