[package]
name = "CrabPort"
version = "0.1.2"
edition = "2024"

[package.metadata.bundle]
name = "CrabPort"
identifier = "org.eu.tachibana-kanade.crabport"
version = "0.1.2"
copyright = "Copyright © 2026 ch1ll321"
icon = ["app-icon.icns", "app-icon.png"]

[dependencies]
crabport-ui = { path = "crabport-ui" }
crabport-core = {path = "crabport-core"}
gpui = { version = "0.2", default-features = false, features = ["font-kit"] }
gpui-component = "0.5"

[build-dependencies]
# Embed `app-icon.ico` into the .exe so Windows shows our icon in the
# taskbar / explorer / alt-tab switcher instead of the default Rust logo.
# On non-Windows targets `build.rs` is a no-op and embed-resource is unused,
# but it's cheap to keep in the build-dep list.
embed-resource = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace]
members = [
    "crabport-core",
    "crabport-ssh",
    "crabport-sftp",
    "crabport-ui",
    "crabport-terminal",
    "crabport-tunnel",
    "crabport-proxy",
    "crabport-telnet",
]
