[package]
name = "CrabPort"
version.workspace = true
edition.workspace = true

[package.metadata.bundle]
name = "CrabPort"
identifier = "org.eu.tachibana-kanade.crabport"
# Note: no `version` here on purpose. `cargo-bundle` falls back to the
# package version when this is unset, and it reads the package version
# via `cargo_metadata` which DOES resolve `version.workspace = true`.
# So omitting `version` here means bumping `[workspace.package].version`
# is the single source of truth — no duplication, no build-time assert.
copyright = "Copyright © 2026 ch1ll321"
icon = ["app-icon.icns", "app-icon.png"]

[dependencies]
crabport-ui = { path = "crabport-ui" }
crabport-core = {path = "crabport-core"}
gpui = { version = "0.2", default-features = false, features = ["font-kit"] }
gpui-component = "0.5"

[build-dependencies]
# Embed `app-icon.ico` into the .exe so Windows shows our icon in the
# taskbar / explorer / alt-tab switcher instead of the default Rust logo.
# On non-Windows targets `build.rs` is a no-op and embed-resource is unused,
# but it's cheap to keep in the build-dep list.
embed-resource = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace]
members = [
    "crabport-core",
    "crabport-ssh",
    "crabport-sftp",
    "crabport-ui",
    "crabport-terminal",
    "crabport-tunnel",
    "crabport-proxy",
    "crabport-telnet",
]

# Single source of truth for the project version. Every member crate
# inherits this via `version.workspace = true` in its own `[package]` table,
# and `cargo-bundle` (which uses `cargo_metadata` to read the package
# version) picks it up automatically for the .app / .AppImage metadata —
# we intentionally do NOT set `[package.metadata.bundle].version` so there
# is nothing to keep in sync. Bumping a release only touches this one line.
[workspace.package]
version = "0.1.3"
edition = "2024"
