[package]
name = "crabport-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
crabport-terminal = { path = "../crabport-terminal" }
russh = "0.45"
async-broadcast = "0.7"
async-channel = "2.5"
tokio = { version = "1", features = ["rt", "net", "macros"] }
async-trait = "0.1"
smol = "2.0"
anyhow = "1"
tracing = "0.1"
