[package]
name = "crabport-terminal"
version.workspace = true
edition.workspace = true

[dependencies]
crabport-sftp = { path = "../crabport-sftp" }
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "fcf32feacb367b75ec84dd40f041e4fd411d3cc1" }
parking_lot = "0.12"
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
libc = "0.2.186"
smol = "2.0.2"
async-channel = "2.5.0"
async-broadcast = "0.7.2"
sysinfo = { version = "0.35", default-features = false, features = ["system", "network", "disk"] }
