[package]
name = "crabport-ui"
version = "0.1.2"
edition = "2024"

[dependencies]
crabport-core = { path = "../crabport-core" }
crabport-terminal = { path = "../crabport-terminal" }
crabport-ssh = { path = "../crabport-ssh" }
crabport-sftp = { path = "../crabport-sftp" }
crabport-telnet = { path = "../crabport-telnet" }
gpui = { version = "0.2", default-features = false, features = ["font-kit"] }
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "fcf32feacb367b75ec84dd40f041e4fd411d3cc1" }
parking_lot = "0.12"
smol = "2.0.2"
gpui-animation = "0.2.60"
gpui-component = "0.5"
rust-i18n = "3"
lru = "0.12"
rustc-hash = "2"
dirs = "6"
tokio = { version = "1", features = ["sync"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Windows-only: needed by `components/window_controls.rs` to read the native
# HWND out of a GPUI `Window` and call `ShowWindowAsync` for proper
# maximize/restore toggling (gpui's `zoom_window()` only ever maximizes on
# Windows, never restores).
[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
