[package]
name = "crabport-ui"
version.workspace = true
edition.workspace = true

[dependencies]
crabport-core = { path = "../crabport-core" }
crabport-terminal = { path = "../crabport-terminal" }
crabport-ssh = { path = "../crabport-ssh" }
crabport-sftp = { path = "../crabport-sftp" }
crabport-telnet = { path = "../crabport-telnet" }
gpui = { version = "0.2", default-features = false, features = ["font-kit"] }
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "fcf32feacb367b75ec84dd40f041e4fd411d3cc1" }
parking_lot = "0.12"
smol = "2.0.2"
gpui-animation = "0.2.60"
gpui-component = "0.5"
rust-i18n = "3"
lru = "0.12"
rustc-hash = "2"
dirs = "6"
tokio = { version = "1", features = ["sync"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
# Used by `version_check` to fetch the latest GitHub release. The check
# runs in a background `cx.spawn` task so the sync API is fine. `serde`/
# `serde_json` are used for `#[derive(Deserialize)]` on the GitHub API
# response subset.
ureq = { version = "3", features = ["json"] }
semver = "1"
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1"
# Used by `src/theme.rs` to parse user-supplied `.toml` theme files from the
# data dir. `crabport-core` already depends on `toml` for `config.toml`, but
# each crate must declare its own direct deps — re-exporting would muddy the
# public surface.
toml = "0.8"
# Used by the SFTP transfer-history panel to format completion timestamps
# in the user's local timezone. `crabport-core` also depends on chrono for
# log timestamps; `crabport-ui` declares its own dep so it doesn't reach
# through `crabport-core`'s public surface.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Cross-platform file locking for the single-instance guard (macOS/Linux
# `flock`, Windows `LockFileEx`). Used in `app_state` to prevent a second
# process from running while the first is alive.
fs2 = "0.4"

# Windows-only: needed by `components/window_controls.rs` to read the native
# HWND out of a GPUI `Window` and call `ShowWindowAsync` for proper
# maximize/restore toggling (gpui's `zoom_window()` only ever maximizes on
# Windows, never restores).
[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
